--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,23 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "lexik/jwt-authentication-bundle": "^2.7",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/orm-pack": "^1.0",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/twig-pack": "^1.0",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "5.1.*",
+      "ext-json": "*"
     },
     "require-dev": {
     },
