--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
       "ext-json": "*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.19"
     },
     "config": {
         "optimize-autoloader": true,
